fixed alignment of game canvas

--- a/styling.css
+++ b/styling.css
@@ -1,24 +1,42 @@
-#starfield {
+body, html { 
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+#container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+ #starfield {
+    width:100%;
+    height:100%;
+    z-index: -1;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+} 
+
+#background,
+#gamecontainer {
   width: 100%;
   height: 100%;
   position: absolute;
-  left: 0px;
-  top: 0px;
+  top: 0;
+  left: 0;
 }
 
-html { 
-	width: 100%;
-	height: 100%;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
+#gamecontainer {
+  z-index: 10;
 }
 
-#gameBoard {
+#gameCanvas {
+	display: inherit;
+	margin-left: auto;
+	margin-right: auto;
+  margin-top: 20%;
 
-	width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 0px;
-  top: 0px;
 }
